tests/baselines/reference/parserVariableDeclaration10.errors.txt
==== tests/cases/compiler/parserVariableDeclaration10.ts (1 errors) ====
    var a,;
         ~
!!! parserVariableDeclaration10.ts(1,6): error TS1009: Trailing comma not allowed.